--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -67,11 +67,14 @@ header h1 {
 /* Navegación */
 nav ul {
     display: flex;
+    flex-wrap: wrap;
     list-style: none;
     justify-content: center;
     background-color: #bb86fc;
     padding: 10px;
-    /* gap: 15px; */
+    gap: 10px;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 nav ul li a {
