--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -72,9 +72,7 @@ nav ul {
     justify-content: center;
     background-color: #bb86fc;
     padding: 10px;
-    gap: 10px;
-    overflow-x: auto;
-    white-space: nowrap;
+    /* gap: 15px; */
 }
 
 nav ul li a {
@@ -167,6 +165,7 @@ nav ul li a:hover {
 
 /* --- Footer --- */
 
+/* Estilos base del footer */
 
 /* Estilos del logo en el footer */
 .footer-content .logo {
@@ -174,9 +173,6 @@ nav ul li a:hover {
     min-width: 120px;
     max-width: 180px;
     height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 .image-container {
     /* width: 100%; */
@@ -241,12 +237,24 @@ nav ul li a:hover {
 }
 
 
+/* ---- */
+.producto.md-3 {
+    margin: 1rem; /* Margen uniforme */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra ligera para efecto flotante */
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.producto.md-3:hover {
+    transform: translateY(-4px); /* Efecto de levitación */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+/* Estructura principal de la página */
 
 
 /* Main ocupa todo el espacio disponible */
 main {
     /* padding: 20px; */
-    background-color: hwb(0 96% 4%);
+    /* background-color: hwb(0 96% 4%); */
 }
 
 /* Footer en la parte inferior */
@@ -263,29 +271,25 @@ main {
     padding: 0;
 }
 
-
-
+odal--- */
 
 .publicidad {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 1rem;
+  /* padding: 1rem; */
   background-color: black;
 }
 
 .publicidad-img {
   width: 100%;
-  max-width: 1200px;
+  /* max-width: 1200px; */
   height: auto;
-  border-radius: 15px;
+
+  /* border-radius: 15px; */
 }
 body {
   overflow-x: hidden;
-}
-img {
-  max-width: 100%;
-  height: auto;
-  display: block;
+  background-color: black;
 }
